--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>Magnam dolores Vasco suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Sobre</h2>
         </div>
 
         <div class="row">
@@ -99,10 +98,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>13 setembro 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Rio de janeiro, Brasil</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Data de aniversário:</strong> <span>13 setembro 2000</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Rio de janeiro, Brasil</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
