Correção de número de telefone

--- a/index.html
+++ b/index.html
@@ -437,8 +437,8 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:+55 (21) 96958-4929</h4>
-                <p></p>
+                <h4>Call:</h4>
+                <p>21 9 6958-4929</p>
               </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.6019056247933!2d-43.23291361313003!3d-22.891159783837885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997eea386659df%3A0x915e7bfd2cc5d456!2zRXN0w6FkaW8gU8OjbyBKYW51w6FyaW8!5e0!3m2!1spt-BR!2sbr!4v1694091166902!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen ></iframe>
             </div>
